# retail1

./: .gitignore
.github/workflows/: backend-ci.yml  infra-ci.yml  mobile-ci.yml  web-ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/dependencies/: tenant_context.py
backend/app/api/routes/: __init__.py  auth.py  gst.py  inventory.py  payments.py  products.py  reports.py  sales.py  sync.py  tenants.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  gst.py  inventory.py  payment.py  product.py  sale.py  tenant.py  user.py
backend/app/schemas/: auth.py  gst.py  inventory.py  payments.py  product.py  reports.py  sales.py  sync.py  tenant.py
backend/app/services/: auth.py  gst.py  inventory.py  payments.py  product.py  reports.py  sales.py  sync.py  tenant.py
backend/app/workers/: gst_worker.py  sync_worker.py
backend/tests/: test_config.py
docs/architecture/: flows.md  multi-tenancy.md  overview.md  printing.md
docs/db/: schema.sql
infra/terraform/: main.tf  outputs.tf  variables.tf
mobile/: app.json  jest.config.js  package.json  tsconfig.json
mobile/__tests__/: useSale.test.ts
mobile/src/: App.tsx
mobile/src/api/: client.ts
mobile/src/components/: SyncStatusBanner.tsx
web/: next.config.js  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/components/: providers.tsx  top-nav.tsx
web/hooks/: use-auth.ts
web/lib/: api-client.ts
(+30 files in other folders)
