[tool.poetry]
name = "pos-backend"
version = "0.1.0"
description = "Multi-tenant POS SaaS backend"
authors = ["POS Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sqlalchemy = "^2.0.23"
psycopg = { extras = ["binary"], version = "^3.1.12" }
asyncpg = "^0.28.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = "^3.3.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
tenacity = "^8.2.3"
httpx = "^0.25.0"
celery = "^5.3.4"
structlog = "^23.1.0"
pendulum = "^3.0.0"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = {extras = ["cli"], version = "^0.25.0"}
pytest-cov = "^4.1.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
